--- a/style.css
+++ b/style.css
@@ -40,7 +40,13 @@ select:hover {
     font-size: 1.25rem
 }
 
-
+@media only screen and (max-width: 760px), (min-width: 768px) and (max-width: 1024px) {
+    /* ... */
+    select {
+        width: 4rem;
+        height: 4rem;
+    }
+}
 
 
 
