--- a/style.css
+++ b/style.css
@@ -47,3 +47,14 @@ select:hover {
         height: 4rem;
     }
 }
+body {
+  padding: 25px;
+  background-color: white;
+  color: black;
+  font-size: 25px;
+}
+
+.dark-mode {
+  background-color: black;
+  color: white;
+}
